<resources>
    <string name="app_name">Room Demo</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="delete">Delete</string>
    <string name="incomplete_information">Incomplete information</string>
    <string name="no_match">No Match</string>
    <string name="products_in_db">Products in db</string>
</resources>
